test/SILOptimizer/static_report.sil
// RUN: %target-swift-frontend %s -emit-sil -verify

import Builtin

// test_static_report
sil @sil_test_static_report : $@convention(thin) (Builtin.RawPointer) -> Builtin.RawPointer {
bb0(%0 : $Builtin.RawPointer):
  %1 = integer_literal $Builtin.Int1, 1
  %2 = string_literal utf8 ""
  %3 = string_literal utf8 "foo bar"
  %4 = builtin "staticReport"(%1 : $Builtin.Int1, %1 : $Builtin.Int1, %0 : $Builtin.RawPointer) : $() // expected-error {{unknown static error}}
  %5 = builtin "staticReport"(%1 : $Builtin.Int1, %1 : $Builtin.Int1, %2 : $Builtin.RawPointer) : $() // expected-error {{unknown static error}}
  %6 = builtin "staticReport"(%1 : $Builtin.Int1, %1 : $Builtin.Int1, %3 : $Builtin.RawPointer) : $() // expected-error {{static error: foo bar}}
  return %0 : $Builtin.RawPointer
}
